@@ -1,1 +1,1 @@
-Main Developer - Jens Gecius (devel@gecois.de)
+Main Developer - Jens Gecius (devel@gecius.de)
